Task 1. Fix tests